2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrections for autotest 2.59b+

	* doc/man/man8/test-osr61.8.man: test updates

2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/osr61.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* src/util/modutils/osr61.in: remove aliases (now in conf.modules)
	* src/drivers/Config.in: wrote strconf file for drivers
	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* src/util/modutils/osr61.in: corrected naming of aliases
	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* osr61.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* osr61.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

	* doc/manual/configure.texi: change driver names
	* doc/manual/descrip.texi: change driver names
	* doc/manual/osr61.texi: change driver names
	* doc/manual/rpm.texi: change driver names
	* doc/manual/tree.texi: change driver names

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/ctimod/ctimod.c: change exports to GPL
	* src/drivers/dlgn/source/dlgn.c: change exports to GPL

	* acinclude.m4: improvements to common build environment
	* doc/man/Makefile.am: added manula pages
	* doc/man/man4/dlgn.4.man: updated with *Driver name
	* doc/man/man4/dvbm.4.man: updated with *Driver name
	* doc/man/man4/gncfd.4.man: updated with *Driver name
	* doc/man/man4/gpio.4.man: updated with *Driver name